# dashboard_indicadores

./: README.md  dashboard.py  pyproject.toml  requirements.txt  vercel.json
app/pages/: dashboard.py
